create github pages

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ body{font-family: EB Garamond;}blockquote{border-color: #4e84c2;}div[submit-succ
 
 
                     <div class="image-block img-2">
-                        <amp-img src="assets/images/01.jpg" layout="responsive" width="429.4117647058824" height="365" alt="image">
+                        <amp-img src="assets/images/mbr-860x573.jpg" layout="responsive" width="429.2495636998255" height="286" alt="image">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
